examples/pass/RMWxlm-RMWxlm.stl
/** RMWxlm-RMWxlm  **/
global x;
local l, m; 

/** Optimised **/ 
RMW(x,l,m); 

/** Unoptimised **/ 
RMW(x,l,m); 
