examples/fail/RMFence2.stl
/** RMFence2 **/

global x; 
local l; 

/** Optimised **/

fenceSC; 
write(x,l); 

/** Unoptimised **/ 

write(x,l); 
fenceSC; 

